--- a/zenlib-core/build.gradle
+++ b/zenlib-core/build.gradle
@@ -7,6 +7,10 @@ version '0.1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+    maven { url 'https://jitpack.io' }
+    jcenter()
 }
 
 dependencies {
